added data valididation
