# games/app/Http/Requests/StoreGameRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreStoreRequest extends FormRequest
+class StoreGameRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,8 +24,11 @@ class StoreStoreRequest extends FormRequest
     public function rules()
     {
         return [
-            'name' => ['required', 'string','min:2'],
-            'address' => ['required', 'string', 'min:2', 'max:250']
+            'title' => ['required', 'string'],
+            'description' => ['required', 'string', 'max:250'],
+            'category' => ['required', 'string'],
+            'price' => ['required', 'integer'],
+            'store_id' => ['required' , 'integer']
         ];
     }
 }
