# games/app/Http/Resources/PlatformResource.php
@@ -14,6 +14,11 @@ class PlatformResource extends JsonResource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'platform_developer' => $this->platform_developer,
+            'description' => $this->description
+        ];
     }
 }
